# gltf-viewer-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  build.rs  config.yml  run.sh
.github/workflows/: build.yml
assets/env/: nx.hdr  nz.hdr  px.hdr  py.hdr  pz.hdr
assets/models/: cesium_man_with_light.glb
assets/shaders/: blur.frag.spv  brdf_lookup.frag  brdf_lookup.frag.spv  brdf_lookup.vert.spv  cubemap.vert.spv  final.frag  final.frag.spv  fullscreen.vert.spv  gbuffer.frag  gbuffer.frag.spv  gbuffer.vert  gbuffer.vert.spv  irradiance.frag  irradiance.frag.spv  model.frag  model.frag.spv  model.vert  model.vert.spv  postprocess.frag  postprocess.frag.spv  postprocess.vert  postprocess.vert.spv  pre_filtered.frag.spv  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv  skybox.frag  skybox.frag.spv  skybox.vert  skybox.vert.spv  spherical.frag  spherical.frag.spv  ssao.frag  ssao.frag.spv  ssao.vert  ssao.vert.spv
crates/libs/environment/: Cargo.toml
crates/libs/environment/src/: brdf.rs  cubemap.rs  irradiance.rs  lib.rs  pre_filtered.rs
crates/libs/math/: Cargo.toml
crates/libs/math/src/: aabb.rs  lib.rs
crates/libs/model/: Cargo.toml
crates/libs/model/src/: animation.rs  lib.rs  light.rs  material.rs  mesh.rs  metadata.rs  node.rs  skin.rs  texture.rs  vertex.rs
crates/libs/util/: Cargo.toml
crates/libs/util/src/: lib.rs
crates/libs/vulkan/: Cargo.toml
crates/libs/vulkan/src/: buffer.rs  debug.rs  image.rs  lib.rs  msaa.rs  pipeline.rs  shader.rs  swapchain.rs  texture.rs  util.rs
crates/libs/vulkan/src/context/: mod.rs  shared.rs
crates/viewer/: Cargo.toml  build.rs
crates/viewer/shaders/: blur.frag  blur.frag.spv  brdf_lookup.frag  brdf_lookup.frag.spv  brdf_lookup.vert  brdf_lookup.vert.spv  cubemap.vert  cubemap.vert.spv  downsample.frag  downsample.frag.spv  final.frag  final.frag.spv  fullscreen.vert  fullscreen.vert.spv  gbuffer.frag  gbuffer.frag.spv  gbuffer.vert  gbuffer.vert.spv  irradiance.frag  irradiance.frag.spv  model.frag  model.frag.spv  model.vert  model.vert.spv  pre_filtered.frag  pre_filtered.frag.spv  skybox.frag  skybox.frag.spv  skybox.vert  skybox.vert.spv  spherical.frag  spherical.frag.spv  ssao.frag  ssao.frag.spv  ssao.vert  ssao.vert.spv  upsample.frag  upsample.frag.spv
crates/viewer/shaders/libs/: camera.glsl  material.glsl
crates/viewer/src/: camera.rs  config.rs  controls.rs  gui.rs  loader.rs  main.rs  viewer.rs
crates/viewer/src/renderer/: attachments.rs  fullscreen.rs  mod.rs  skybox.rs  ssao.rs
crates/viewer/src/renderer/model/: gbufferpass.rs  lightpass.rs  mod.rs  uniform.rs
crates/viewer/src/renderer/model/gbufferpass/: mod.rs  renderpass.rs
crates/viewer/src/renderer/model/lightpass/: mod.rs  renderpass.rs
crates/viewer/src/renderer/postprocess/: bloom.rs  blurpass.rs  finalpass.rs  mod.rs
crates/viewer/src/renderer/postprocess/blurpass/: mod.rs  renderpass.rs
crates/viewer/src/renderer/ssao/: mod.rs
environment/: Cargo.toml
environment/src/: brdf.rs  cubemap.rs  irradiance.rs  lib.rs  pre_filtered.rs
gltf-viewer-rs/: Cargo.toml  build.rs
gltf-viewer-rs/src/: controls.rs  viewer.rs
gltf-viewer-rs/src/renderer/: mod.rs  model.rs  skybox.rs
math/: Cargo.toml
math/src/: aabb.rs  lib.rs
model/: Cargo.toml
model/src/: animation.rs  error.rs  lib.rs  light.rs  material.rs  mesh.rs  metadata.rs  mikktspace.rs  node.rs  skin.rs  texture.rs  vertex.rs
scripts/: debug.ps1  run.ps1  run.sh
src/: base.rs  camera.rs  config.rs  controls.rs  environment.rs  error.rs  gui.rs  loader.rs  main.rs  math.rs  model.rs  pipelines.rs  util.rs  viewer.rs
src/model/: animation.rs  material.rs  mesh.rs  mod.rs  node.rs  skin.rs  texture.rs  util.rs  vertex.rs
src/renderer/: fullscreen.rs  mod.rs  model.rs  postprocess.rs  renderpass.rs  skybox.rs
src/renderer/model/: mod.rs  uniform.rs
src/renderer/model/gbufferpass/: mod.rs  renderpass.rs
src/renderer/model/lightpass/: mod.rs  renderpass.rs
src/renderer/postprocess/: finalpass.rs  mod.rs
src/renderer/postprocess/blurpass/: mod.rs  renderpass.rs
src/renderer/ssao/: mod.rs  renderpass.rs
src/vulkan/: buffer.rs  context.rs  debug.rs  descriptor.rs  image.rs  mod.rs  pipeline.rs  renderpass.rs  shader.rs  swapchain.rs  texture.rs  util.rs
util/: Cargo.toml
util/src/: fs.rs  lib.rs
vulkan/: Cargo.toml
vulkan/src/: buffer.rs  debug.rs  descriptor.rs  image.rs  lib.rs  mod.rs  msaa.rs  pipeline.rs  renderpass.rs  shader.rs  surface.rs  swapchain.rs  texture.rs  vertex.rs
vulkan/src/context/: mod.rs  shared.rs
vulkan/src/extensions/: mod.rs
