[workspace]
members = [
    "crates/viewer",
    "crates/libs/*"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Adrien Bennadji <adrien.bennadji@live.fr>"]

[workspace.dependencies]
vulkan = { path = "crates/libs/vulkan" }
model = { path = "crates/libs/model" }
math = { path = "crates/libs/math" }
util = { path = "crates/libs/util" }
environment = { path = "crates/libs/environment" }

log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = "3.1"
cgmath = "0.18"
rand = "0.8"
lerp = "0.5"
byteorder = "1.4"
mikktspace = "0.3"
image = "0.24"
ash = { version = "0.37", features = ["loaded"] }
ash-window = "0.12"
raw-window-handle = "0.5"
winit = { version = "0.29", default-features = false, features = ["rwh_05"]}
gltf = "1.3"
egui = "0.26"
egui-winit = "0.26"
egui-ash-renderer = { version = "0.1.0", features = ["dynamic-rendering"]}
