[workspace]
members = [
    "crates/viewer",
    "crates/libs/*"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Adrien Bennadji <adrien.bennadji@live.fr>"]

[workspace.dependencies]
vulkan = { path = "crates/libs/vulkan" }
model = { path = "crates/libs/model" }
math = { path = "crates/libs/math" }
util = { path = "crates/libs/util" }
environment = { path = "crates/libs/environment" }

log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = {version =  "4.5", features = ["derive"] }
cgmath = "0.18"
rand = "0.9"
lerp = "0.5"
byteorder = "1.4"
mikktspace = "0.3"
image = "0.25"
ash = "0.38"
ash-window = "0.13"
raw-window-handle = "0.6"
winit = "0.30"
gltf = "1.3"
egui = "0.31"
egui-winit = "0.31"
egui-ash-renderer = { version = "0.8", features = ["dynamic-rendering"] }

[patch.crates-io.gltf]
git = "https://github.com/adrien-ben/gltf"
branch = "missing_extensions"
