[package]
name = "model"
version = "0.1.0"
authors = ["Adrien Bennadji <adrien.bennadji@live.fr>"]
edition = "2018"

[dependencies]
vulkan = { path = "../vulkan" }
math = { path = "../math" }

log = "0.4"
env_logger = "0.8"
byteorder = "1.3"
mikktspace = "0.2"

[dependencies.gltf]
version = "0.15"
features = ["KHR_lights_punctual", "KHR_materials_unlit", "KHR_materials_pbrSpecularGlossiness"]
