[package]
name = "vulkan"
version = "0.1.0"
authors = ["Adrien Bennadji <adrien.bennadji@live.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.7.1"
ash = "0.29.0"
winit = "0.19.5"

imgui = "0.3"
imgui-rs-vulkan-renderer = "0.3"

[target.'cfg(windows)'.dependencies]
winapi = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.17"
cocoa = "0.20"
objc = "0.2"
