[package]
name = "vulkan"
version = "0.1.0"
authors = ["Adrien Bennadji <adrien.bennadji@live.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.7.1"
ash = "0.31"
ash-window = "0.5"
winit = "0.22"
imgui = "0.5"
imgui-rs-vulkan-renderer = "0.5"
