[package]
name = "vulkan"
version = "0.1.0"
authors = ["Adrien Bennadji <adrien.bennadji@live.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9"
ash = { version = "0.35", features = ["loaded"] }
ash-window = "0.9"
winit = "0.26"
imgui = "0.8"
