[package]
name = "gltf-viewer-rs"
version = "0.1.0"
authors = ["Adrien Bennadji <adrien.bennadji@live.fr>"]
edition = "2018"
build = "build.rs"

[dependencies]
vulkan = { path = "../libs/vulkan" }
model = { path = "../libs/model" }
math = { path = "../libs/math" }
util = { path = "../libs/util" }
environment = { path = "../libs/environment" }

log = "0.4"
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
clap = "3.1"
imgui = "0.8"
imgui-winit-support = { version = "0.8", default-features = false, features = ["winit-26"] }
imgui-rs-vulkan-renderer = "1.3.0"
