[package]
name = "gltf-viewer-rs"
version = "0.1.0"
authors = ["Adrien Bennadji <adrien.bennadji@live.fr>"]
edition = "2021"
build = "build.rs"

[dependencies]
vulkan = { path = "../libs/vulkan" }
model = { path = "../libs/model" }
math = { path = "../libs/math" }
util = { path = "../libs/util" }
environment = { path = "../libs/environment" }

log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = "3.1"
imgui = "0.11"
imgui-winit-support = "0.11"
imgui-rs-vulkan-renderer = { version = "1.9", features = ["dynamic-rendering"] }
