[package]
name = "gltf-viewer-rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
build = "build.rs"

[dependencies]
vulkan.workspace = true
model.workspace = true
math.workspace = true
util.workspace = true
environment.workspace = true

log.workspace = true
env_logger.workspace = true
serde.workspace = true
serde_yaml.workspace = true
clap.workspace = true
egui.workspace = true
egui-winit.workspace = true
egui-ash-renderer.workspace = true
