[package]
name = "model"
version = "0.1.0"
authors = ["Adrien Bennadji <adrien.bennadji@live.fr>"]
edition = "2021"

[dependencies]
vulkan = { path = "../vulkan" }
math = { path = "../math" }

log = "0.4"
env_logger = "0.9"
byteorder = "1.4"
mikktspace = "0.3"

[dependencies.gltf]
version = "1.0"
features = ["KHR_lights_punctual", "KHR_materials_unlit", "KHR_materials_pbrSpecularGlossiness"]
