[package]
name = "model"
version = "0.1.0"
authors = ["Adrien Bennadji <adrien.bennadji@live.fr>"]
edition = "2021"

[dependencies]
vulkan = { path = "../vulkan" }
math = { path = "../math" }

log = "0.4"
byteorder = "1.4"
mikktspace = "0.3"

[dependencies.gltf]
version = "1.0"
git = "https://github.com/adrien-ben/gltf"
features = [
    "KHR_lights_punctual", 
    "KHR_materials_unlit", 
    "KHR_materials_pbrSpecularGlossiness",
    "KHR_materials_emissive_strength"
]
